# Study-1

./: .ideavimrc  README.md  sample.txt  test.yaml  to do list.md  to do list.txt
Notes/C#/: _C#.md
Notes/CMake/: CMakeLists.txt
Notes/Git/: Git.txt
Notes/JavaScript/: Reference.md  _JS.md
Notes/JavaScript/codes/_notes/: 02.js  run.html
Notes/Linux/: bash_script.md  terminal.md
Notes/Linux/Ubuntu/: backup_howto.md  chrome_remote_desktop.md  code-server.md  ubuntu_on_termux.md
Notes/MarkDown/: formatting_syntax.md
Notes/Ubuntu/: backup_howto.md  first_setup.md  first_setup_oci_amd.md  openssh.md  ssh.md
Notes/Ubuntu/Backup/: howto.md
Notes/Ubuntu/Setup/: cold&dark.md
Notes/VMware/: errorfix.md
Notes/Vim/: _vim_main.md  awesome-vim-colorschemes.md  nerdtree.md  vim-airline.md  vim-commenatry.md  vim-surround.md  vim_main.md
Playground/: markdowntest.md
Playground/react_test/: canvas.tsx  package-lock.json
Studies/AI/DeepLearningFromScratch/: src.md
Studies/AI/DeepLearningFromScratch/ch01/: 1.6.3.py
Studies/AI/DeepLearningFromScratch/ch02/: 2.3.1.py
Univ_Lectures/C++/C++_basic/: _C++.txt
Univ_Lectures/C/C_advanced/: _C.txt  _sandbox  _sandbox.c  getch.c  getchar  getchar.c  strtok  strtok.c  vector  vector.c
Univ_Lectures/C/C_basic/: C.txt  _C.txt  _sandbox  _sandbox.c  arithmetic  arithmetic.c  deci_to_binary  deci_to_binary.c  formatting  formatting.c  helloworld  primeInt  primeInt.c  stdarg  stdarg.c
Univ_Lectures/SK_VIP_!/SystemPrograming/: func_prototypes.c
vscode_extentions_vsix/: asvetliakov.vscode-neovim-0.0.88.vsix
(+491 files in other folders)
